# MoveNet-HumanPose-Estimation

./: .env  .gitignore  LICENSE  README.md  human-pose-estimation-with-movenet.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/movenet_runner/: __init__.py  cli.py  config.py  draw.py  export_coco.py  infer_core.py  io_utils.py  model.py
tests/: test_infer_core.py  test_io_utils.py
