[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movenet-runner"
version = "0.1.0"
description = "MoveNet MultiPose CLI runner"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pose-run = "movenet_runner.cli:main"
pose-export-coco = "movenet_runner.export_coco:main"

